# sfml-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run
lib/: CMakeLists.txt
lib/framework/: CMakeLists.txt  framework.h
lib/framework/Data/: Data.h  Map.h  TiledMap.cpp  TiledMap.h
project/: CMakeLists.txt  main.cpp
